--- a/presentacion (2).html
+++ b/presentacion (2).html
@@ -10,7 +10,7 @@
 	<body>
 		<img class="foto" src="git.png" alt="LogoGIT"/>
 		<h1> Comandos en GIT </h1>
-		<h2>Git es un software de control de versiones</h2>
+		<h2>git es un software de control de versiones</h2>
 	<fieldset>
 	<p> git init: inicializa un nuevo repositorio Git </p>
 	</fieldset>
