--- a/presentacion (2).html
+++ b/presentacion (2).html
@@ -13,6 +13,8 @@
 		<h2>git es un software de control de versiones</h2>
 	<fieldset>
 	<p> git init: inicializa un nuevo repositorio Git </p>
+	<p>git commit : nos da el nombrte de nuestro repositorio donde se guardo 
+	el cambio que realizamos </p>
 	</fieldset>
 	</body>
 </html>
